Update code angulartraining

--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
 </head>
 <body ng-app="MyApp">
 <div ng-controller="AppCtrl" class="md-padding dialog" id="popupContainer">
-    <div class="dialog-demo-content" layout="row" ayout="row" layout-wrap="" layout-margin="" layout-align="center">
-        <md-button id="btnPopup" class="md-primary md-raised" ng-click="showPopup($event)">
-            Open Dialog
-        </md-button>
-    </div>
+    <div id="btnId" class="dialog-demo-content" layout="row" ayout="row"  layout-align="center"></div>
 </div>
 </body>
 </html>
